Added max cutCount option and add penalties to totals

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -15,7 +15,7 @@
 			<td><a href="{{ proxyprefix }}playerstats/{{ row['player'] }}">{{ row['name'] }}</a></td>
 			<td>{{ row['country'] }}</td>
 			<td>{% raw row['flag_image'] %}</td>
-			<td>{{ row['games_played'] }}</td>
+			<td>{{ row['gamesPlayed'] }}</td>
 			<td>{{ row['points'] }}</td>
 			<td>{{ row['penalty'] }}</td>
 			<td>{{ row['total'] }}</td>
