--- a/templates/resetpassword.html
+++ b/templates/resetpassword.html
@@ -12,13 +12,13 @@
 	{% except %}{% end %}
 
 	<p>Reset password for {{ email }}</p>
-	<form action="reset/{{ id }}" method="post">
+	<form action="{{ proxyprefix }}reset/{{ id }}" method="post">
 		<input id="password-field" name="password" placeholder="PASSWORD" type="password" /><br/>
 
 		<input id="vpassword-field" name="vpassword" placeholder="REPEAT PASSWORD" type="password" /><br/>
-		<input id="nexturi" name="nexturi" type="hidden" 
+		<input id="nexturi" name="nexturi" type="hidden"
 		       value="{% if nexturi %}{{ nexturi }}{% end %}" />
-		<input id="nexttask" name="nexttask" type="hidden" 
+		<input id="nexttask" name="nexttask" type="hidden"
 		       value="{% if nexttask %}{{ nexttask }}{% end %}" />
 
 		<input type="submit" value="Reset"/>
