Fix place/rank when all players are tied

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -1,6 +1,8 @@
 <table>
 	<tr class="leaderbd_col_header">
-		<th>PLACE</th>
+		{% if not allTied %}
+			<th>PLACE</th>
+		{% end %}
 		<th>NAME</th>
 		<th colspan="2" >COUNTRY</th>
 		<th>GAMES</th>
@@ -11,7 +13,9 @@
 	</tr>
 	{% for row in leaderboard %}
 		<tr class="leaderbd_row" data-status="{{ row['type'] }}">
-			<td>{{ row['place'] }}</td>
+			{% if not allTied %}
+				<td>{{ row['place'] }}</td>
+			{% end %}
 			<td><a href="{{ proxyprefix }}playerstats/{{ row['player'] }}">{{ row['name'] }}</a></td>
 			<td>{{ row['country'] }}</td>
 			<td>{% raw row['flag_image'] %}</td>
