Fix updating country in Tournament Settings and prettify listing
This fixes the problem where picking a different country for the tournament
was not updating the database.  It also changes the layout of the table
of tournament attributes to be prettier.  Messages about successful updates
to attributes are removed. New messages show up for invalid data entries
along with the highlighting of the input fields.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -162,6 +162,20 @@ button.clearplayercomplete {
 
 .listing, .centerbutton {
 	margin: auto;
+	vertical-align: middle;
+}
+
+.listing td {
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+.listing input {
+	margin-bottom: 0.75em;
+}
+
+.listing select {
+	margin-bottom: 0.75em;
 }
 
 #currentUsers {
