--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -8,7 +8,7 @@
 		</script>
 {% end %}
 {% block title %}
-	{{ websitename }} - {{ tournamentname }}
+	- {{ tournamentname }}
 {% end %}
 {% block content %}
 <div id="tournament">
