--- a/templates/tables.html
+++ b/templates/tables.html
@@ -9,8 +9,10 @@
 	</ul>
 	{% for round in sorted(rounds, key=lambda r: r['round']) %}
 		<div class="round" data-round="{{ round['round'] }}" id="round-{{ round['round'] }}">
-		{% if (is_admin or (current_user and current_user == str(owner))) and not round['has_scores'] %}
+		  {% if (is_admin or (current_user and current_user == str(owner))) %}
+		        {% if not round['has_scores'] %}
 			<button class="genround">Generate</button><br />
+		        {% end %}
 			<button class="genscores">Randomize Scores</button><br />
 		{% end %}
 			<a href="seating.csv?round={{ round['round'] }}">Download as CSV</a>
