Change creation of new tournaments to happen sooner
This change changes the creation of the Tournaments record to happen
before loading the web page to edit it.  This avoids having to reload
the page on the first change (but now allows tournaments with no name
to be created).  Keyboard focus is forced on the tournament name field
if it's empty.

--- a/templates/edittournament.html
+++ b/templates/edittournament.html
@@ -116,6 +116,7 @@ Tournament Settings
       <td colspan="3" class="deletetournament">
 	{% if tournament['Id'] %}
 	    <input type="button" class="button centerbutton"
+		   data-tournamentid="{{ tournament['Id'] }}"
 		   id="deletetournamentbutton"
 		   value="Delete Tournament" />
 	{% end %}
