Comment out cut ID in leaderboard

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -3,7 +3,7 @@
 		{% if not allTied %}
 			<th>PLACE</th>
 		{% end %}
-		<th>CUT</th>	
+		{% comment <th>CUT</th>	%}
 		<th>NAME</th>
 		<th colspan="2" >COUNTRY</th>
 		<th>GAMES</th>
@@ -17,7 +17,7 @@
 			{% if not allTied %}
 				<td>{{ row['place'] }}</td>
 				{% end %}
-				<td> {{ row['cutId'] }} </td>
+			{% comment <td> {{ row['cutId'] }} </td> %}
 			<td><a href="{{ proxyprefix }}playerstats/{{ row['player'] }}">{{ row['name'] }}</a></td>
 			<td>{{ row['country'] }}</td>
 			<td>{% raw row['flag_image'] %}</td>
