Add confirmation dialog to delete tournament

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -191,3 +191,11 @@ button.clearplayercomplete {
 		width: 100%;
 	}
 }
+
+.no-close .ui-dialog-titlebar-close {
+	display: none;
+}
+
+#delete-tournament-confirmation {
+	display: none;
+}
