--- a/templates/edittournament.html
+++ b/templates/edittournament.html
@@ -135,4 +135,10 @@ Tournament Settings
     No Players (yet)
   {% end %}
 </div>
+<div id="delete-tournament-confirmation" class="confirm-dialog no-close"
+     title="Confirm deletion" >
+  <p><span class="ui-icon ui-icon-alert"
+	   style="float:left; margin:12px 12px 20px 0;">
+    </span>Are you sure you want to delete the tournament?</p>
+</div>
 {% end %}
