--- a/static/css/style.css
+++ b/static/css/style.css
@@ -183,6 +183,10 @@ button.clearplayercomplete {
 	margin: auto;
 }
 
+.cut-separator {
+ 	font-size: small;
+}
+
 @media (max-width:600px) {
 	#tables > .table {
 		width:100%;
