--- a/static/css/colors/00-default.css
+++ b/static/css/colors/00-default.css
@@ -34,6 +34,30 @@ table td {
 	background:#222;
 }
 
+.jsgrid-row > .jsgrid-cell {
+    background: #333;
+}
+
+.jsgrid-alt-row > .jsgrid-cell {
+    background: #111;
+}
+
+.jsgrid-header-row > .jsgrid-header-cell {
+    background: #111;
+}
+
+.jsgrid-filter-row > .jsgrid-cell {
+    background: #444;
+}
+
+.jsgrid-insert-row > .jsgrid-cell {
+    background: #446;
+}
+
+.jsgrid-edit-row > .jsgrid-cell {
+    background: #fdffe3;
+}
+
 .ui-widget-content, .ui-state-default, #tournament li {
 	background: #111;
 	color: #eee;
