--- a/templates/template.html
+++ b/templates/template.html
@@ -13,19 +13,23 @@
 		<link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css' />
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet" type="text/css" />
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.theme.min.css" rel="stylesheet" type="text/css" />
+		<link href="{{ proxyprefix.rstrip('/') + static_url("js/jsgrid.min.css") }}" type="text/css" rel="stylesheet" />
+		<link href="{{ proxyprefix.rstrip('/') + static_url("js/jsgrid-theme.min.css") }}" type="text/css" rel="stylesheet" />
+
 		<link href="{{ proxyprefix.rstrip('/') + static_url("css/style.css") }}" type="text/css" rel="stylesheet" />
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js" type="text/javascript"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/notify.min.js" type="text/javascript"></script>
+		<script src="{{ proxyprefix.rstrip('/') + static_url("js/jsgrid.min.js") }}" type="text/javascript"></script>
+		<script src="{{ proxyprefix.rstrip('/') + static_url("js/script.js") }}"></script>
 
 		{% if current_user and stylesheet %}
 			<link href="{{ proxyprefix.rstrip('/') + static_url("css/colors/" + stylesheet) }}" type="text/css" rel="stylesheet" />
 		{% else %}
 			<link href="{{ proxyprefix.rstrip('/') + static_url("css/colors/00-default.css") }}" type="text/css" rel="stylesheet" />
 		{% end %}
-
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js" type="text/javascript"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/notify.min.js" type="text/javascript"></script>
-		<script src="{{ proxyprefix.rstrip('/') + static_url("js/script.js") }}"></script>
 
 		<script type="text/javascript">
 			var base = "{{ proxyprefix }}";
