Changed player list to load through a JSON call and autoload the jsGrid

--- a/static/css/colors/00-default.css
+++ b/static/css/colors/00-default.css
@@ -38,7 +38,7 @@ table td {
     background: #333;
 }
 
-.jsgrid-alt-row > .jsgrid-cell {
+.jsgrid-nodata-row > .jsgrid-cell, .jsgrid-alt-row > .jsgrid-cell {
     background: #111;
 }
 
