Enabled insert, delete, and update of players using jsGrid
This works in many cases but there are still challenges where an item
is updated but leaves an empty row in the grid.  Inserted tiems go to the
bottom row, so seem to disappear.

--- a/static/css/colors/00-default.css
+++ b/static/css/colors/00-default.css
@@ -55,7 +55,11 @@ table td {
 }
 
 .jsgrid-edit-row > .jsgrid-cell {
-    background: #fdffe3;
+    background: #464;
+}
+
+.jsgrid-invalid input {
+    background: #644;
 }
 
 .ui-widget-content, .ui-state-default, #tournament li {
