Improved country selection and partly fixed not showing players after updates
Made country field a selector and put flag in separate column from
country code.

Added number of scores to player item for later use in making
deletion button conditional.

--- a/templates/playerlist.html
+++ b/templates/playerlist.html
@@ -6,10 +6,10 @@
 	type="text/javascript"></script>
 {% end %}
 {% block title %}
-	All Tournament Players
+	All Players
 {% end %}
 {% block content %}
-    <h2>All Tournment Players</h2>
+    <h2 class="playerListTitle">All Tournment Players</h2>
     <div id="playersGrid">
     </div>
 
