--- a/templates/template.html
+++ b/templates/template.html
@@ -13,8 +13,8 @@
 		<link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css' />
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet" type="text/css" />
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.theme.min.css" rel="stylesheet" type="text/css" />
-		<link href="{{ proxyprefix.rstrip('/') + static_url("js/jsgrid.min.css") }}" type="text/css" rel="stylesheet" />
-		<link href="{{ proxyprefix.rstrip('/') + static_url("js/jsgrid-theme.min.css") }}" type="text/css" rel="stylesheet" />
+		<link href="{{ proxyprefix.rstrip('/') + static_url("js/jsgrid.css") }}" type="text/css" rel="stylesheet" />
+		<link href="{{ proxyprefix.rstrip('/') + static_url("js/jsgrid-theme.css") }}" type="text/css" rel="stylesheet" />
 
 		<link href="{{ proxyprefix.rstrip('/') + static_url("css/style.css") }}" type="text/css" rel="stylesheet" />
 
@@ -22,7 +22,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js" type="text/javascript"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/notify.min.js" type="text/javascript"></script>
-		<script src="{{ proxyprefix.rstrip('/') + static_url("js/jsgrid.min.js") }}" type="text/javascript"></script>
+		<script src="{{ proxyprefix.rstrip('/') + static_url("js/jsgrid.js") }}" type="text/javascript"></script>
 		<script src="{{ proxyprefix.rstrip('/') + static_url("js/script.js") }}"></script>
 
 		{% if current_user and stylesheet %}
