Added color and opacity changes when hovering over buttons.
Better spacing around table cell content

--- a/static/css/colors/00-default.css
+++ b/static/css/colors/00-default.css
@@ -11,6 +11,10 @@ button, input, select, .button, .clickable,
 	color:#ddd;
 }
 
+button:hover, input[type="submit"]:hover, a:hover, .colheader:hover {
+    color: #ddf;
+}
+
 input::placeholder {
 	color:#777;
 }
