Changed background color of table buttons on home page

--- a/static/css/colors/00-default.css
+++ b/static/css/colors/00-default.css
@@ -15,6 +15,10 @@ button:hover, input[type="submit"]:hover, a:hover, .colheader:hover {
     color: #ddf;
 }
 
+.table-button {
+    background: #333
+}
+
 input::placeholder {
 	color:#777;
 }
