--- a/templates/template.html
+++ b/templates/template.html
@@ -27,11 +27,8 @@
 		<script src="{{ useLocal('https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js') }}" type="text/javascript"></script>
 		<script src="{{ proxyprefix.rstrip('/') + static_url("js/script.js") }}"></script>
 
-		{% if current_user and stylesheet %}
-			<link href="{{ proxyprefix.rstrip('/') + static_url("css/colors/" + stylesheet) }}" type="text/css" rel="stylesheet" />
-		{% else %}
-			<link href="{{ proxyprefix.rstrip('/') + static_url("css/colors/00-default.css") }}" type="text/css" rel="stylesheet" />
-		{% end %}
+		<link href="{{ proxyprefix.rstrip('/') + static_url("css/colors/") + (stylesheet if current_user and stylesheet else '00-default.css') }}"
+		      id="userstylesheet" type="text/css" rel="stylesheet" />
 
 		<script type="text/javascript">
 			var base = "{{ proxyprefix }}";
