Changed playerstats endpoint to playerStats to avoid conflict with players

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -25,7 +25,7 @@
 			{% if not allTied %}
 				<td>{{ row['place'] }}</td>
 				{% end %}
-			<td><a href="{{ proxyprefix }}playerstats/{{ row['player'] }}">{{ row['name'] }}</a></td>
+			<td><a href="{{ proxyprefix }}playerStats/{{ row['player'] }}">{{ row['name'] }}</a></td>
 			<td>{{ row['country'] }}</td>
 			<td>{% raw row['flag_image'] %}</td>
 			<td>{{ row['gamesPlayed'] }}</td>
