--- a/templates/playerstats.html
+++ b/templates/playerstats.html
@@ -32,7 +32,7 @@
 			<div id="statshistory">
 				<h2>Recently Viewed</h2>
 				{% for historyPlayer in history %}
-					<a href="{{ proxyprefix }}playerstats/{{ historyPlayer[0] }}">{{ historyPlayer[1] }}</a><br />
+					<a href="{{ proxyprefix }}playerStats/{{ historyPlayer[0] }}">{{ historyPlayer[1] }}</a><br />
 				{% end %}
 			</div>
 		{% end %}
