--- a/templates/tables.html
+++ b/templates/tables.html
@@ -59,7 +59,7 @@
 								{% if round['winds'] %}
 									<td class="windicator">{{ player['wind'] }}</td>
 								{% end %}
-								<td class="name"><a href="{{ proxyprefix }}playerstats/{{ player['player']['id'] }}">{{ player['player']['name'] }}</a></td>
+								<td class="name"><a href="{{ proxyprefix }}playerStats/{{ player['player']['id'] }}">{{ player['player']['name'] }}</a></td>
 								<td class="country">{{ player['player']['country'] }}</td>
 								<td class="flag">{% raw player['player']['flag'] %}</td>
 								<td class="rawscore">
