--- a/templates/template.html
+++ b/templates/template.html
@@ -27,7 +27,7 @@
 		<script src="{{ useLocal('https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js') }}" type="text/javascript"></script>
 		<script src="{{ proxyprefix.rstrip('/') + static_url("js/script.js") }}"></script>
 
-		<link href="{{ proxyprefix.rstrip('/') + static_url("css/colors/" + (stylesheet if (current_user and stylesheet) else '00-default.css')) }}"
+		<link href="{{ proxyprefix.rstrip('/') + static_url("css/colors/" + (stylesheet if (current_user and stylesheet) else '00-dark-gray.css')) }}"
 		      id="userstylesheet" type="text/css" rel="stylesheet" />
 
 		<script type="text/javascript">
