--- a/static/css/playerstats.css
+++ b/static/css/playerstats.css
@@ -5,6 +5,26 @@
 .game > table {
 	width:100%;
 }
+
+.statsummarytable table, .statsummarytable td, .pielegendbox {
+    margin: auto;
+}
+
+.statsummarytable > table {
+    border: 2px solid #ddd;
+}
+
+.rankpielegend td {
+    padding-left: 0.3em;
+    padding-right: 0.3em;
+}
+
+.playerattr, .playerrole {
+    display: inline-block;
+    padding-left: 0.7em;
+    padding-right: 0.7em;
+}
+
 @media(max-width:600px) {
 	.game {
 		width:100%;
