--- a/templates/playerstats.html
+++ b/templates/playerstats.html
@@ -6,35 +6,177 @@
 <link href="{{ proxyprefix.rstrip('/') + static_url("css/playerstats.css") }}"
       type="text/css" rel="stylesheet" />
 
+<script>
+  activeTab = 0;
+  rank_histograms = new Object();
+  {% for i, tourney in enumerate(tourneys) %}
+    {% if tourney['Id'] == selectedTournament %}
+    activeTab = {{ i }};
+    {% end %} <!-- if tourney['Id'] -->
+  rank_histograms[{{ tourney['Id'] }}] = [];
+  {% for ent in tourney['rank_histogram'] %}
+    rank_histograms[{{ tourney['Id'] }}].push(
+      {rank: {{ ent['rank'] }}, count: {{ ent['count'] }} });
+  {% end %} <!-- for entry in tourney['rank_histogram'] -->
+  {% end %} <!-- for i, tourney -->
+</script>
 <script src="{{ proxyprefix.rstrip('/') + static_url("js/playerstats.js") }}"
-	type="text/javascript"></script>
+	type="text/javascript">
+</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.10.2/d3.min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js" type="text/javascript"></script>
-{% end %}
+{% end %} <!-- block head -->
 
 {% block content %}
   {% if error %}
     <h1 id="message">{{ error }}</h1>
   {% else %}
-		<h1 id="message">{{ player['Name'] }}{% if player['Number'] is not None %} (#{{ player['Number'] }}){% end %}</h1>
+    <div id="playerbasics">
+      <h1 id="message">{{ player['Name'] }}</h1>
 
-		<div id="country">Country: {{ player['CountryCode'] }} {% raw player ['Flag_Image'] %}</td>
-		{% if player['Association'] is not None %}
-			<div id="association">Association: {{ player['Association'] }}</td>
-		{% end %}
-		{% if player['Pool'] is not None %}
-			<div id="pool">Pool: {{ player['Pool'] }}</td>
-		{% end %}
+      <div id="country" class="playerattr">
+	Country: {{ player['Code'] }} {% raw player['Flag_Image'] %}
+      </div>
+      {% if player['Association'] is not None %}
+      <div id="association" class="playerattr">
+	Association: {{ player['Association'] }}
+      </div>
+      {% end %} <!-- if player['Association'] -->
+      {% if player['BirthYear'] is not None %}
+      <div id="birthyear" class="playerattr">
+	Birth Year: {{ player['BirthYear'] }}
+      </div>
+      {% end %} <!-- if player['BirthYear'] is not None -->
+    </div>
     <div id="playerstats">
+      {% if len(tourneys) > 1 %}
+      <ul>
+	{% for tourney in tourneys %} <!-- #1 -->
+	<li class="tourneytab">
+	  <a href="#tourney-{{ tourney['Id'] }}">
+	    {{ tourney['Name'] }}
+	  </a>
+	</li>
+	{% end %} <!-- for tourney in tourneys #1 -->
+      </ul>
+      {% end %} <!-- if len(tourneys) > 1 -->
+      {% for tourney in tourneys %} <!-- #2 -->
+      {% set tp = tourney['player'] %}
+      <div class="tourneypanel" id="tourney-{{ tourney['Id'] }}"
+	   data-tourneyID="{{ tourney['Id'] }}">
+	<div class="statsummary" data-tourneyID="{{ tourney['Id'] }}">
+	  <h2>{{ tourney['Name'] }}</h2>
+	  {% for f in ['Type', 'Number', 'Pool', 'Wheel'] %}
+            {% if tp[f] is not None %}
+	    <div class="playerrole">
+	      {{ 'Player ' if f == 'Type' else ''}}{{ f }}:
+	      {{ playertypes[tp[f]] if f == 'Type' else tp[f] }}
+	    </div>
+	    {% end %} <!-- if tourney[f] is not None -->
+	  {% end %} <!-- for f in ['Type' -->
+	  <div class="statsummarytable" data-tourneyID="{{ tourney['Id'] }}">
+	    <table>
+	      <tr><th></th>      <th>Min</th>            <th>Max</th></tr>
+	      <tr>
+		<td>Score</td>
+		<td>{{ tourney['minscore'] }}</td>
+		<td>{{ tourney['maxscore'] }}</td> 
+	      </tr>
+	      <tr>
+		<td>Rank</td>
+		<td>{{ tourney['minrank'] }}</td>
+		<td>{{ tourney['maxrank'] }}</td> 
+	      </tr>
+	      <tr>
+		<td>Average Score</td>
+		<td colspan="2">{{ tourney['avgscore'] }}</td>
+	      </tr>
+	      <tr>
+		<td>Penalties</td>
+		<td colspan="2">{{ tourney['penalties'] }}</td>
+	      </tr>
+	      <tr>
+		<td>Average Rank</td>
+		<td colspan="2">{{ tourney['avgrank'] }}</td>
+	      </tr>
+	      <tr>
+		<td>
+		  <div class="pielegendbox">
+		    <table class="rankpielegend"> </table>
+		  </div>
+		</td>
+		<td colspan="2">
+		  <div class="piechartbox">
+		    <svg class="rankpiechart"> 
+		      Browser does not support inline SVG
+		    </svg>
+		  </div>
+		</td>
+	      </tr>
+	    </table>
+	  </div>
+	</div>
+	<div id="playergames" data-tourneyID="{{ tourney['Id'] }}">
+	  {% for game in tourney['playergames'] %}
+	  <div class="game">
+	    <h3>{{ game['roundname'] }} Scores</h3>
+	    <table>
+	      <tr>
+		<th>Rank</th><th>Name</th><th colspan="2">Country</th><th>Score</th>
+	      </tr>
+	      {% for result in game['scores'] %}
+	      <tr>
+		<td>{{ result['rank'] }}</td>
+		<td><a href="{{ proxyprefix }}playerStats/{{ result['id'] }}?tournament={{ tourney['Id'] }}">
+		    {{ result['name'] }}
+		</a></td>
+		<td>{{ result['country'] }}</td>
+		<td>{% raw result['flag'] %}</td>
+		<td>{{ result['score'] }}</td>
+	      </tr>
+	      {% end %} <!-- for result in game['scores'] -->
+	    </table>
+	  </div>
+	  {% end %}  <!-- game in tourney -->
+	</div>
+	<div id="playerseating" data-tourneyID="{{ tourney['Id'] }}">
+	  {% for match in tourney['futuregames'] %}
+	  <div class="game">
+	    <h3>{{ match['roundname'] }} Seating</h3>
+	    <table>
+	      <tr>
+		<th colspan="{{ '4' if match['showwinds'] else '3' }}">
+		  Table {{ match['table'] }}
+		</th>
+	      </tr>
+	      {% for seat in match['seating'] %}
+	      <tr>
+		{% if match['showwinds'] %}
+		<td>{{ seat['wind'] }}</td>
+		{% end %} <!-- if match['showwinds'] -->
+		<td><a href="{{ proxyprefix }}playerStats/{{ result['id'] }}?tournament={{ tourney['Id'] }}">
+		    {{ seat['name'] }}
+		</a></td>
+		<td>{{ seat['country'] }}</td>
+		<td>{% raw seat['flag'] %}</td>
+	      </tr>
+	      {% end %} <!-- seat in match['seating'] -->
+	    </table>
+	  </div>
+	  {% end %} <!-- match in futuregames -->
+	</div>
+      </div>
+      {% end %} <!-- tourney in tourneys -->
     </div>
     <br />
-		{% if history and len(history) > 0 %}
-			<div id="statshistory">
-				<h2>Recently Viewed</h2>
-				{% for historyPlayer in history %}
-					<a href="{{ proxyprefix }}playerStats/{{ historyPlayer[0] }}">{{ historyPlayer[1] }}</a><br />
-				{% end %}
-			</div>
-		{% end %}
-  {% end %}
-{% end %}
+    {% if history and len(history) > 0 %}
+    <div id="statshistory">
+      <h2>Recently Viewed Players</h2>
+      {% for historyPlayer in history %}
+      <a href="{{ proxyprefix }}playerStats/{{ historyPlayer[0] }}">
+	{{ historyPlayer[1] }}
+      </a><br />
+      {% end %} <!-- historyPlayer in history -->
+    </div>
+    {% end %} <!-- if history and len(history) > 0 -->
+  {% end %} <!-- if error -->
+{% end %} <!-- block content -->
