--- a/static/css/colors/00-dark-gray.css
+++ b/static/css/colors/00-dark-gray.css
@@ -1,12 +1,12 @@
-html, body, #tournament > ul, #seating > ul {
+html, body, .ui-widget, .ui-widget-header {
 	background:#111;
 	color:#eee;
 }
 
 button, input, select, .button, .clickable,
 #navbar, #navbar > a, table th, .table > h3, .timer > h3,
-.ui-widget-content, .ui-menu .ui-menu-item, .ui-menu .ui-menu-item.ui-state-focus,
-.ui-datepicker-header.ui-widget-header, .ui-widget-content.ui-datepicker {
+.ui-widget-content, .ui-menu .ui-menu-item, .ui-menu .ui-menu-item .ui-state-focus,
+.ui-datepicker-header .ui-widget-header, .ui-widget-content .ui-datepicker {
 	background:#444;
 	color:#ddd;
 }
@@ -70,25 +70,23 @@ table td {
     background: #644;
 }
 
-.ui-widget-content, .ui-state-default, #tournament li {
-	background: #111;
+.ui-widget .ui-state-default, .ui-widget-content .ui-state-default,
+.ui-tabs .ui-state-default, .ui-state-default a:link, .ui-tabs-panel {
+    background: #111;
+    color: #eee;
+    border: 1px solid #555;
+}
+
+.ui-tabs .ui-state-hover, .ui-tabs .ui-state-active,
+.ui-state-active a:link {
+	background: #333;
 	color: #eee;
-	border: 1px solid #555;
 }
-.ui-widget-content, .ui-state-hover, .ui-widget-content, .ui-state-active {
-	background: #eee;
-	color: #444;
-}
-.ui-widget-content, .ui-state-highlight {
+.ui-state-highlight {
 	background: #666;
 	color: #eee;
 }
-.ui-icon {
-	background-image: url(https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/images/ui-icons_ffffff_256x240.png);
-}
-.ui-state-hover, .ui-icon {
-	background-image: url(https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/images/ui-icons_222222_256x240.png);
-}
+
 .ui-menu, .ui-menu-item, .ui-state-focus {
 	background:#666;
 }
